...
                modifier = Modifier
                    .align(Alignment.BottomEnd)
                    .padding(Dimensions.FabOffset),
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "add new stream",
                )
            }

            streamToDelete?.let { stream ->
                DeleteConfirmDialog(
                    streamName = stream.name,
...
